--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,8 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             width: 400px;
+            min-height: 500px;
+            max-height: 600px;
             background: white;
             display: flex;
             flex-direction: column;
