Add selective folder organization with unified interface
Implements selective bookmark organization allowing users to choose specific
folders to organize or organize all bookmarks through a unified folder
selector interface. Simplifies popup UI by consolidating organization
options into one location.

New Features:
- Hierarchical folder tree selector with expand/collapse controls
- Checkbox-based folder selection with parent/child relationships
- "Organize Selected Folders" for selective organization
- "Organize All" option within folder selector (prominent yellow button)
- Search/filter functionality to find folders by name
- Bulk selection controls: Select All, Deselect All, Expand All, Collapse All
- Live selection counter showing folders and bookmark counts
- Pre-selects folders containing bookmarks on load
- Top-level folders automatically expanded for immediate visibility
- Confirmation dialogs with backup warnings before organization
- Progress tracking with badge indicators during execution

UI Changes:

Popup (popup.html):
- Removed "Organize All Bookmarks" button
- Renamed to single "🗂️ Organize Bookmarks" button
- Opens unified folder selector page in new tab
- Removed confirmation dialog (moved to folder selector)
- Removed min/max height constraints for natural sizing
- Simplified to two actions: Organize + Auto-Organize toggle

Folder Selector (folder-selector.html - NEW):
- Full-page interface matching options.html styling
- Purple gradient header with clear instructions
- Hierarchical folder tree with visual indentation
- Shows bookmark counts: (15) direct, [47] total with subfolders
- Search box for filtering folders
- Toolbar with bulk selection controls
- Live selection info banner
- Action bar layout: Cancel | Organize Selected ........... ⚡ Organize All
- Yellow/orange gradient on "Organize All" (matches settings warnings)
- Confirmation overlay with dynamic messages
- Status area for loading/error messages

Backend Implementation:

BookmarkMana

--- a/options.html
+++ b/options.html
@@ -294,6 +294,64 @@
             cursor: pointer;
         }
 
+        .radio-option-card {
+            background: white;
+            border: 2px solid #e0e0e0;
+            border-radius: 8px;
+            padding: 16px;
+            margin-bottom: 12px;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .radio-option-card:hover {
+            border-color: #667eea;
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.1);
+        }
+
+        .radio-option-card.selected {
+            border-color: #667eea;
+            background: #f8f9ff;
+        }
+
+        .radio-option-header {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 8px;
+        }
+
+        .radio-option-header input[type="radio"] {
+            width: 18px;
+            height: 18px;
+            margin: 0;
+            cursor: pointer;
+            flex-shrink: 0;
+        }
+
+        .radio-option-title {
+            font-weight: 600;
+            font-size: 1em;
+            color: #333;
+            flex: 1;
+        }
+
+        .radio-option-badge {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 2px 10px;
+            border-radius: 12px;
+            font-size: 0.8em;
+            font-weight: 600;
+        }
+
+        .radio-option-description {
+            margin-left: 30px;
+            color: #666;
+            font-size: 0.9em;
+            line-height: 1.6;
+        }
+
         .info-box {
             background: #e3f2fd;
             border-left: 4px solid #2196f3;
@@ -453,12 +511,40 @@
                     </div>
 
                     <div class="form-group">
-                        <div class="checkbox-group">
-                            <input type="checkbox" id="respectOrganizationHistory" name="respectOrganizationHistory">
-                            <label for="respectOrganizationHistory">Remember previous organization</label>
+                        <label>Remember Previous Organization</label>
+                        <div style="margin-top: 16px;">
+                            <label class="radio-option-card" for="historyOrganizeAllOnly">
+                                <div class="radio-option-header">
+                                    <input type="radio" id="historyOrganizeAllOnly" name="respectOrganizationHistory" value="organizeAllOnly" checked>
+                                    <span class="radio-option-title">Only During "Organize All"</span>
+                                    <span class="radio-option-badge">Recommended</span>
+                                </div>
+                                <div class="radio-option-description">
+                                    Skip previously organized bookmarks when using "Organize All", but always reorganize when you explicitly select specific folders.
+                                </div>
+                            </label>
+
+                            <label class="radio-option-card" for="historyAlways">
+                                <div class="radio-option-header">
+                                    <input type="radio" id="historyAlways" name="respectOrganizationHistory" value="always">
+                                    <span class="radio-option-title">Always Remember</span>
+                                </div>
+                                <div class="radio-option-description">
+                                    Skip previously organized bookmarks in all operations (both "Organize All" and specific folder selection).
+                                </div>
+                            </label>
+
+                            <label class="radio-option-card" for="historyNever">
+                                <div class="radio-option-header">
+                                    <input type="radio" id="historyNever" name="respectOrganizationHistory" value="never">
+                                    <span class="radio-option-title">Never Remember</span>
+                                </div>
+                                <div class="radio-option-description">
+                                    Always reorganize all bookmarks regardless of previous organization.
+                                </div>
+                            </label>
                         </div>
-                        <small>When enabled, bookmarks that have been organized before will be skipped in future organization runs. This prevents re-organizing bookmarks you've manually moved. Enabled by default.</small>
-                        <button type="button" id="clearHistoryBtn" class="btn-secondary" style="margin-top: 10px;">Clear Organization History</button>
+                        <button type="button" id="clearHistoryBtn" class="btn-secondary" style="margin-top: 20px;">Clear Organization History</button>
                     </div>
 
                     <div class="divider"></div>
@@ -580,5 +666,30 @@
     </div>
 
     <script src="dist/options.js"></script>
+    <script>
+        // Add visual feedback for radio option cards
+        document.addEventListener('DOMContentLoaded', () => {
+            const radioCards = document.querySelectorAll('.radio-option-card');
+            const radioInputs = document.querySelectorAll('input[name="respectOrganizationHistory"]');
+
+            function updateCardStates() {
+                radioCards.forEach(card => {
+                    const radio = card.querySelector('input[type="radio"]');
+                    if (radio && radio.checked) {
+                        card.classList.add('selected');
+                    } else {
+                        card.classList.remove('selected');
+                    }
+                });
+            }
+
+            radioInputs.forEach(radio => {
+                radio.addEventListener('change', updateCardStates);
+            });
+
+            // Initialize on load
+            updateCardStates();
+        });
+    </script>
 </body>
 </html>
