Add user-configurable organization modes and enhanced UI controls
This commit introduces flexible organization modes and comprehensive UI improvements
to give users more control over bookmark organization behavior.

**Major Features:**

• Use Existing Folders Mode
  - New "Organization Mode" setting with radio buttons (Create Folders/Use Existing)
  - Less aggressive reorganization that allows bookmarks to stay in current folders
  - LLM can return KEEP_CURRENT to preserve existing organization
  - Categories section grays out when using existing folders mode

• Quick Settings Panel (folder-selector page)
  - Prominent panel below header for frequently changed settings
  - Toggle buttons for Organization Mode and Remember Previous Organization
  - Settings persist immediately via chrome.runtime.sendMessage
  - Compacted header design (reduced padding, smaller fonts)

• Organization History Management
  - New dedicated section in settings page
  - "Mark All as Organized" button to bulk-mark existing bookmarks
  - "Clear History" button to reset organization tracking
  - Moved "Automatically organize new bookmarks" into this section
  - Changed default respectOrganizationHistory to 'always' (from 'organizeAllOnly')

• Wildcard Pattern Support
  - Custom folder ignore patterns now support * and ? wildcards
  - matchGlobPattern() method for flexible folder name matching
  - Helpful placeholder text explaining wildcard syntax

• Collapsible Advanced Settings
  - Performance and Debug settings grouped under collapsible section
  - Reduces visual clutter on settings page
  - Section starts collapsed by default

• Results Page Enhancements
  - "Organize Again" button to quickly restart organization
  - Settings button in header for easy access
  - Improved messaging about organization history behavior

• OAuth Integration Improvements
  - API key field automatically hidden when using OpenRouter OAuth
  - Cleaner UI when key management is handled externally

**Technical Chan

--- a/folder-selector.html
+++ b/folder-selector.html
@@ -32,52 +32,52 @@
         .header {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 40px;
+            padding: 24px 40px;
             text-align: center;
             position: relative;
         }
 
         .header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
+            font-size: 1.8em;
+            margin-bottom: 6px;
             font-weight: 700;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 15px;
+            gap: 12px;
         }
 
         .header .subtitle {
-            font-size: 1.2em;
+            font-size: 0.95em;
             opacity: 0.9;
         }
 
         .header-icon {
-            font-size: 2.5em;
+            font-size: 1.8em;
         }
 
         .settings-btn {
             position: absolute;
-            top: 20px;
+            top: 16px;
             right: 20px;
             background: rgba(255, 255, 255, 0.2);
             color: white;
             border: 2px solid rgba(255, 255, 255, 0.3);
-            padding: 10px 20px;
-            border-radius: 8px;
+            padding: 8px 16px;
+            border-radius: 6px;
             cursor: pointer;
-            font-size: 0.95em;
+            font-size: 0.85em;
             font-weight: 600;
             transition: all 0.2s;
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: 6px;
         }
 
         .settings-btn:hover {
             background: rgba(255, 255, 255, 0.3);
             border-color: rgba(255, 255, 255, 0.5);
-            transform: translateY(-2px);
+            transform: translateY(-1px);
         }
 
         .content {
@@ -356,6 +356,91 @@
             display: block;
         }
 
+        /* Quick Settings */
+        .quick-settings {
+            background: linear-gradient(135deg, #f5f7fa 0%, #e8ecf1 100%);
+            border-bottom: 2px solid #667eea;
+            padding: 16px 40px;
+        }
+
+        .quick-settings-title {
+            font-size: 13px;
+            font-weight: 600;
+            color: #667eea;
+            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .quick-settings-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+
+        .setting-item {
+            background: white;
+            border-radius: 6px;
+            padding: 8px 10px;
+            border: 1.5px solid #e0e0e0;
+        }
+
+        .setting-label {
+            font-size: 10px;
+            font-weight: 700;
+            color: #666;
+            margin-bottom: 6px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .setting-value {
+            display: flex;
+            gap: 4px;
+        }
+
+        .toggle-btn {
+            flex: 1;
+            padding: 5px 8px;
+            font-size: 11px;
+            font-weight: 600;
+            border: 1.5px solid #d0d0d0;
+            background: #fafafa;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.15s;
+            color: #666;
+            white-space: nowrap;
+        }
+
+        .toggle-btn:hover {
+            border-color: #667eea;
+            background: #f0f3ff;
+            color: #667eea;
+            transform: translateY(-1px);
+        }
+
+        .toggle-btn.active {
+            background: linear-gradient(135deg, #ff9800 0%, #ff6f00 100%);
+            border-color: #ff9800;
+            color: white;
+            box-shadow: 0 2px 8px rgba(255, 152, 0, 0.4);
+            font-weight: 700;
+        }
+
+        .toggle-btn.active:hover {
+            opacity: 0.95;
+            transform: translateY(-1px);
+            box-shadow: 0 3px 10px rgba(255, 152, 0, 0.5);
+        }
+
+        @media (max-width: 768px) {
+            .quick-settings-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
         /* Confirmation Dialog */
         .confirmation-overlay {
             position: fixed;
@@ -443,6 +528,31 @@
             </button>
             <h1><span class="header-icon">📁</span>Select Folders to Organize</h1>
             <p class="subtitle">Choose which folders you want to organize with AI</p>
+        </div>
+
+        <!-- Quick Settings -->
+        <div class="quick-settings">
+            <div class="quick-settings-title">
+                <span>⚡</span>
+                <span>Quick Settings</span>
+            </div>
+            <div class="quick-settings-grid">
+                <div class="setting-item">
+                    <div class="setting-label">Organization Mode</div>
+                    <div class="setting-value">
+                        <button class="toggle-btn" data-setting="folderMode" data-value="create" title="AI creates new folders based on predefined categories. Ensures consistent folder structure and prevents endless folder creation.">Create Folders</button>
+                        <button class="toggle-btn" data-setting="folderMode" data-value="existing" title="AI only uses your existing folder structure. Bookmarks that don't fit well will stay where they are instead of being forced into inappropriate folders.">Use Existing</button>
+                    </div>
+                </div>
+                <div class="setting-item">
+                    <div class="setting-label">Remember Previous Organization</div>
+                    <div class="setting-value">
+                        <button class="toggle-btn" data-setting="historyMode" data-value="always" title="Always skip previously organized bookmarks in all operations. Best for preventing re-organization of bookmarks you've already placed. (Recommended)">Always Remember</button>
+                        <button class="toggle-btn" data-setting="historyMode" data-value="organizeAllOnly" title="Skip previously organized bookmarks when using 'Organize All', but always reorganize when you explicitly select specific folders.">Only During "Organize All"</button>
+                        <button class="toggle-btn" data-setting="historyMode" data-value="never" title="Always reorganize all bookmarks regardless of previous organization.">Never Remember</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="content">
