--- a/options.html
+++ b/options.html
@@ -479,9 +479,10 @@
                             <option value="openai">OpenAI</option>
                             <option value="claude">Claude (Anthropic)</option>
                             <option value="grok">Grok (xAI)</option>
+                            <option value="gemini">Google Gemini</option>
                             <option value="custom">Custom (OpenAI-compatible)</option>
                         </select>
-                        <small>Choose which AI service to use for organizing your bookmarks. OpenRouter provides unified access to multiple AI providers.</small>
+                        <small>Choose which AI service to use for organizing your bookmarks. OpenRouter provides unified access to multiple AI providers. Gemini offers a free tier with no credit card required.</small>
                     </div>
 
                     <!-- Custom Endpoint Configuration -->
@@ -531,6 +532,7 @@
                             • OpenAI: gpt-4o-mini<br>
                             • Claude: claude-3-haiku-20240307<br>
                             • Grok: grok-beta<br>
+                            • Gemini: gemini-flash-latest (FREE - no credit card required!)<br>
                             • OpenRouter: meta-llama/llama-3.3-70b-instruct:free (FREE - no credits required!)
                         </small>
                     </div>
