Add configurable retry logic for LLM requests
### LLM Retry Logic
- Add configurable retry attempts (1-10, default 3) and retry delay (1-60s, default 10s)
- Implement smart error classification to retry only transient failures
- Retry on: network errors, timeouts, 5xx server errors, 429 rate limits
- Skip retry on: 4xx client errors (auth/validation failures)
- All LLM calls now use retry wrapper for improved reliability

### Configuration Changes
- Add retryAttempts and retryDelay to PerformanceConfig interface
- Update DEFAULT_PERFORMANCE with retry defaults
- Clear health check cache when any config changes (ensures popup re-validates)

### UI Changes (options.html)
- Add retry attempts input field with validation (1-10 attempts)
- Add retry delay input field with validation (1-60 seconds)
- Include helper text explaining purpose of each setting

### Background Service Updates
- Pass retry config to all LLMService instantiations
- Health checks use 1 attempt for fast failure detection
- Auto-organize uses configured retry settings

### Test Updates
- Update all test files with retry properties in PerformanceConfig objects
- Configure test LLMService instances with 1 retry attempt and 0 delay for fast test execution
- All tests passing (250 passed, 21 skipped)

### Technical Implementation
- callLLMWithRetry(): Wrapper method that handles retry logic
- isRetryableError(): Classifies errors as retryable or permanent
- sleep(): Utility for delay between retry attempts
- Replaced all callLLM() calls with callLLMWithRetry()

Files changed: 8 files, 181 insertions(+), 37 deletions(-)

--- a/options.html
+++ b/options.html
@@ -851,6 +851,24 @@
                                 </div>
                                 <small>Maximum tokens for AI response. Higher values allow processing larger batches but cost more. Rate limiting is handled automatically with smart retry logic. (1024-8192 tokens)</small>
                             </div>
+
+                            <div class="form-group">
+                                <label for="retryAttempts">Retry Attempts</label>
+                                <div class="input-with-unit">
+                                    <input type="number" id="retryAttempts" name="retryAttempts" min="1" max="10" value="3" required>
+                                    <span class="unit-label">attempts</span>
+                                </div>
+                                <small>Number of times to retry failed LLM requests (helps with transient network issues)</small>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="retryDelay">Retry Delay</label>
+                                <div class="input-with-unit">
+                                    <input type="number" id="retryDelay" name="retryDelay" min="1" max="60" value="10" required>
+                                    <span class="unit-label">seconds</span>
+                                </div>
+                                <small>Time to wait between retry attempts</small>
+                            </div>
                         </div>
 
                         <div class="collapsible-subsection">
